--- a/Segment_Predict.ipynb
+++ b/Segment_Predict.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6Dqy40g2i3SFMKBUJi9i+",
+      "authorship_tag": "ABX9TyO44W6YE/8FBXgFq7WF0pyn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "#**Understanding the data**\n",
         "\n",
         "---\n",
-        "Step1:\n",
+        "**Step1:**\n",
         "So we are starting with importing the libraries like pandas,seaborn and matplotlib.\n",
         "\n",
         "\n"
@@ -67,7 +67,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Step2: We are creating a dataframe in pandas to read the csv dataset.\n",
+        "**Step2:** We are creating a dataframe in pandas to read the csv dataset.\n",
         "\n"
       ],
       "metadata": {
@@ -88,7 +88,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Step3:  With df.shape we can see how many rows and cols are there.\n"
+        "**Step3:**  With df.shape we can see how many rows and cols are there.\n"
       ],
       "metadata": {
         "id": "SLXP4X1gpeez"
@@ -123,7 +123,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Step4: df.info() gives a basic info about the dataset like datatype ,null count.\n"
+        "**Step4:** df.info() gives a basic info about the dataset like datatype ,null count.\n"
       ],
       "metadata": {
         "id": "-UnGPGPdpK-b"
@@ -166,7 +166,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Step5: pandas provides us a unique method to retrieve the data from the dataset df.iloc() meth is used to extract cols by col_no.\n"
+        "**Step5:** pandas provides us a unique method to retrieve the data from the dataset df.iloc() meth is used to extract cols by col_no.\n"
       ],
       "metadata": {
         "id": "qnnw98H4py3c"
